# whispercast-extra

./: CMakeLists.txt  README
admin/: CMakeLists.txt
admin/application/: Bootstrap.php
admin/application/modules/default/: Bootstrap.php
admin/application/modules/default/controllers/: ErrorController.php  IndexController.php
admin/application/modules/default/models/: Server.php  Stream.php  User.php
admin/application/modules/default/models/Action/: Aggregators.php  Aliases.php  Files.php  Index.php  Osd.php  Playlists.php  Programs.php  Ranges.php  Remotes.php  Servers.php  Sources.php  Streams.php  Switches.php  Users.php
admin/application/modules/default/models/DbTable/: Acl.php  Aggregators.php  Aliases.php  Files.php  FilesTranscoded.php  Playlists.php  Programs.php  Ranges.php  Remotes.php  Servers.php  Sources.php  Streams.php  StreamsCategories.php  Switches.php  Users.php
admin/application/modules/default/models/Delegate/: Aggregators.php  Aliases.php  Files.php  Playlists.php  Programs.php  Ranges.php  Remotes.php  Sources.php  Streams.php  Switches.php
admin/application/modules/default/views/helpers/: BaseUrl.php
admin/application/modules/default/views/scripts/aggregators/: delete.phtml  display.phtml  edit.phtml
admin/application/modules/default/views/scripts/aliases/: delete.phtml  display.phtml  edit.phtml
admin/application/modules/default/views/scripts/error/: error.phtml
admin/application/modules/default/views/scripts/files/: delete.phtml  display.phtml  edit.phtml  upload.phtml
admin/application/modules/default/views/scripts/index/: index.phtml  library.phtml
admin/application/modules/default/views/scripts/osd/: edit.phtml  library.phtml
admin/application/modules/default/views/scripts/playlists/: delete.phtml  display.phtml  edit.phtml
admin/application/modules/default/views/scripts/programs/: delete.phtml  display.phtml  edit.phtml
admin/application/modules/default/views/scripts/ranges/: delete.phtml  display.phtml  edit.phtml
admin/application/modules/default/views/scripts/remotes/: delete.phtml  display.phtml  edit.phtml
admin/application/modules/default/views/scripts/servers/: console.phtml  delete.phtml  edit.phtml
admin/application/modules/default/views/scripts/sources/: delete.phtml  (+2 more)
admin/application/resources/: Cache.php  View.php  Whispercast.php
admin/application/views/helpers/: Javascript.php
admin/application/views/layouts/default/: form.phtml  form_element.phtml  form_group.phtml  layout.phtml  paginator.phtml
admin/install/: README  application.ini  database.sql  install
admin/public/: .htaccess
admin/public/css/: app.css  common.css  errors.css  form.css  table.css  uploader.css
admin/public/js/: app.js  base.js  css.js  dialog.js  errors.js  form.js  locale.js  notifier.js  player.js  progress.js  resolver.js  sandbox.js  table.js  uploader.js  uri.js  uuid.js
admin/public/player/: player.html  player.js
admin/public/swf/: player.swf
extra_library/: CMakeLists.txt  aux_element_mapper.cc  aux_element_mapper.h  aux_element_mapper.rpc  extra_library.cc  extra_library.h  extra_library.rpc
extra_library/feature_detector/: feature_detector.cc  feature_detector.h
extra_library/flavouring/: flavouring_element.cc  flavouring_element.h
extra_library/http_authorizer/: http_authorizer.cc  http_authorizer.h
extra_library/logic_policy/: logic_policy.cc  logic_policy.h
extra_library/schedule/: schedule_policy.cc  schedule_policy.h
extra_library/time_delay/: time_delay_policy.cc  time_delay_policy.h
extra_library/time_range/: time_range_element.cc  time_range_element.h
extra_library/time_shift/: time_shift_element.cc  time_shift_element.h
features/: CMakeLists.txt
features/decoding/: bitmap_extractor.cc  bitmap_extractor.h  feature_data.cc  feature_data.h  feature_extractor.cc  feature_extractor.h
features/util/: file_thumbnailer.cc  file_thumbnailer.h  flv_extract_features.cc  flv_grep_features.cc  flv_thumbnailer.cc  flv_thumbnailer.h  flv_thumbnailer_app.cc  jpeg_util.cc  jpeg_util.h  libav_converter.cc  rtmp_thumbnailer.cc  rtmp_thumbnailer.h
osd/: CMakeLists.txt
osd/base/: CMakeLists.txt  flv_to_osd_decoder.cc  flv_to_osd_decoder.h  osd.rpc  osd_tag.cc  osd_tag.h  osd_to_flv_encoder.cc  osd_to_flv_encoder.h
osd/base/js/: CMakeLists.txt
osd/osd_library/: osd_library.cc  osd_library.h  osd_library.rpc
osd/osd_library/osd_associator/: osd_associator_element.cc  osd_associator_element.h
osd/osd_library/osd_associator/test/: osd_associator_test.1  osd_associator_test.2  osd_associator_test.cc  osd_associator_test.sh
osd/osd_library/osd_decoder/: osd_decoder_element.cc  osd_decoder_element.h
osd/osd_library/osd_encoder/: osd_encoder_element.cc  osd_encoder_element.h
osd/osd_library/osd_injector/: osd_injector_element.cc  osd_injector_element.h
osd/osd_library/osd_remote_associator/: osd_associator_client_element.cc  osd_associator_client_element.h
osd/osd_library/osd_state_keeper/: osd_state_keeper_element.cc  osd_state_keeper_element.h
stats/: CMakeLists.txt  mysql_stats_saver.cc  mysql_stats_saver.h  mysql_stats_saver_complete.cc  mysql_stats_saver_complete.h  mysql_stats_saver_custom.cc  mysql_stats_saver_custom.h  mysql_stats_saver_light.cc  mysql_stats_saver_light.h  stats_post_processor.cc
transcoder/slave/: CMakeLists.txt  master_wrapper.cc  master_wrapper.h  media_file.cc  media_file.h  rpc_slave_manager_service.cc  rpc_slave_manager_service.h  slave.cc  state.rpc
transcoder/transcoder/: CMakeLists.txt  media_transcoder.cc
utils/thumbnailer/: CMakeLists.txt  thumbnailer_app.cc
whisperproc/: CMakeLists.txt  whisperproc.cc  whisperproc.rpc  whisperproc_thumbnails.cc  whisperproc_thumbnails.h  whisperproc_util.cc  whisperproc_util.h
whisperproc/scripts/: whisperproc_util.py
whisperproc2/: CMakeLists.txt  processor.cc  processor.h  whisperproc.cc
whisperproc2/scripts/: prepare_local_install.py  whisperproc_cleanup_files.py  whisperproc_detect_bad_clips.py  whisperproc_fillup.py  whisperproc_get_coverage_files.py  whisperproc_range_select.py
(+359 files in other folders)
